--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,6 @@
 @import "bootstrap/scss/bootstrap-grid";
 @import "base";
 @import "layout";
-@import "modules/example";
+@import "modules/title";
+@import "modules/heading";
+@import "modules/product";
