--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,5 @@
 @import "modules/title";
 @import "modules/heading";
 @import "modules/product";
+@import "modules/bottom";
+@import "modules/advantage";
