--- a/src/scss/modules/_product.scss
+++ b/src/scss/modules/_product.scss
@@ -20,13 +20,15 @@
   font-family: "Francois One";
   font-size: 35px;
   font-weight: 400;
+  display: flex;
+  justify-content: center;
 }
 
 .product p {
   color: var(--dark-blue, #005564);
   text-align: center;
   font-family: "Nunito Sans";
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 400;
 }
 
@@ -36,4 +38,8 @@
   font-family: "Font Awesome 6 Free";
   font-size: 18px;
   font-weight: 900;
+}
+
+.product-info p {
+  display: none;
 }
