--- a/src/scss/modules/_title.scss
+++ b/src/scss/modules/_title.scss
@@ -6,3 +6,20 @@
   align-items: center;
   background: var(--dark-blue, #005564);
 }
+
+.title.is-active {
+  background: var(--yellow, #fce757);
+}
+
+h1 {
+  color: var(--white, #fff);
+  text-align: center;
+  font-family: "Francois One";
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 120px; /* 200% */
+}
+
+.is-active h1 {
+  color: #005564;
+}
