--- a/src/scss/modules/_product.scss
+++ b/src/scss/modules/_product.scss
@@ -14,7 +14,6 @@
 }
 
 .product h3 {
-  align-self: stretch;
   color: var(--dark-blue, #005564);
   text-align: center;
   font-family: "Francois One";
@@ -22,6 +21,7 @@
   font-weight: 400;
   display: flex;
   justify-content: center;
+  width: 400px;
 }
 
 .product p {
